# jyotish-nadi-template

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
docs/: accuracy-standard.md  architecture.md  corpus-evaluation.md  multi-engine-validation.md  nadi-data-sources.md  prd.md  product-plan.md  quality-scorecard.md  roadmap.md
docs/contracts/: chart-json.md  reading-json.md  request-json.md
evaluations/cases/: sample-case.json
evaluations/rubrics/: reading-rubric.json
nadi_leaf/: __init__.py  chart_adapter.py  cli.py  cross_validator.py  evaluation.py  fingerprint.py  guidance_engine.py  jyotishganit_adapter.py  models.py  reading_engine.py  report_writer.py
references/: evidence-policy.md  fingerprint-boundary.md  kandam-map.md  nadi-source-registry.json  open-source-foundations.md  theme-packs.md
runtimes/codex/: INSTRUCTIONS.md
scripts/: evaluate_reading.py  export_markdown_reports.py  generate_reading.py
tests/: test_calibration.py  test_chart_adapter.py  test_cross_validator.py  test_evaluation.py  test_fingerprint.py  test_guidance_engine.py  test_models.py  test_reading_engine.py  test_report_writer.py
